Add Windows compatibility fixes and wandb offline mode
- Add normalize_to_neg_one_to_one() helper function for multiprocessing
- Replace lambda functions with named function for Windows pickle compatibility
- Change num_workers=16 to num_workers=0 for Windows
- Add wandb.init(mode='offline') for local logging without internet
- Enable wandb offline mode (option 3) for local experiment tracking

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ data/
 *.ckpt
 results_afhq/
 test_run/
+test_run_*
 checkpoints/
+path_to_save_folder/
+results_part2/
 
 # Generated samples and visualizations
 sample_ddpm_*/
@@ -54,3 +57,10 @@ desktop.ini
 
 # wandb
 wandb/
+offline-run-*/  # Wandb offline run folders
+
+# Additional patterns for diffusion training
+runs/  # General runs folder
+lightning_logs/  # PyTorch Lightning logs
+tensorboard_logs/  # TensorBoard logs
+weights/  # Model weights folder
